# hyped

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish-to-pypi.yml
examples/: data_parallel.py  distributed_data_parallel.py  run.sh
examples/configs/: amazon_cat_13k_distilbert_exp.json  conll2003_distilbert_data.json  conll2003_distilbert_exp.json  imdb_bert_data.json  imdb_bert_exp.json  imdb_gpt2_promt_data.json  trec_distilbert_exp.json
examples/dvc/: .gitignore  README.md  dvc.yaml
examples/lm/: .gitignore  data_bookcorpus.json  dvc.yaml  exp.json  run.json
experiments/bllm/: bllm.py  run.py
hyped/: __init__.py  base.py  cli.py
hyped/base/: auto.py  config.py  generic.py  registry.py
hyped/data/: graph.py  pipe.py
hyped/datasets/: cas.py
hyped/evaluate/: auto.py  processors.py
hyped/filters/: filter.py  msl.py
hyped/metrics/: __init__.py  auto.py  collection.py
hyped/modeling/: __init__.py  auto.py  collator.py  heads.py  model.py  wrapper.py
hyped/modelling/: heads.py
hyped/pipeline/: __init__.py  auto.py  pipeline.py
hyped/processors/: __init__.py  bio.py  cls.py  processor.py  tokenizer.py
hyped/scripts/: evaluate.py  prepare.py  train.py
hyped/stages/: __init__.py
hyped/utils/: arrow.py  executor.py  feature_access.py  feature_checks.py  spans.py  typedlist.py  typedmapping.py
tests/: test_base.py
tests/base/: test_config.py  test_generic.py  test_registry.py
tests/data/: test_graph.py  test_pipe.py
tests/utils/: test_arrow.py  test_consumer.py  test_feature_checks.py  (+1 more)
(+206 files in other folders)
