[project]
name = "hyped"
version = "0.1.0"
description = "TODO"
classifiers = [
    "License :: Freely Distributable",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.10",
]
authors = [
    {name = "Niclas Doll"},
]
requires-python = ">=3.11"
license = {text = "Apache 2.0"}
dependencies = [
    "datasets>=2.16.1",
    "fsspec<=2023.9.2",
    "transformers>=4.36.2",
    "networkx>=3.1",
    "matplotlib>=3.8.2"
]

[project.optional-dependencies]
linting = ["pre-commit"]
tests = ["pytest"]
peft = [
    "peft>=0.9.0",
    "bitsandbytes>=0.42.0"
]

[build-system]
requires = ["setuptools >= 61.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["hyped"]

[tool.black]
target-version = ["py311"]
line-length = 79

[tool.isort]
profile = "black"
line_length = 79

[tool.ruff]
line-length = 79
